Fix order_query page bug
1.修正欄位名稱錯誤
2.修正兩個tr之間的間距大小

--- a/dev/order_query/all.styl
+++ b/dev/order_query/all.styl
@@ -179,6 +179,9 @@
 .empty_button
     visibility: hidden
         
+.order_query_info_table tbody tr
+    margin-bottom: 30px
+    
 +media-query( all, max-width $phone_rwd_width )
     .do_button
         margin: 0 auto
