--- a/dev/order_query/index.jade
+++ b/dev/order_query/index.jade
@@ -46,9 +46,9 @@ block content
                         td(data-th='訂單編號') 
                             a(href="#") EJ201702030001
                         td(data-th='下單時間') 2017/02/03 12:21
-                        td(data-th='付款方式') $ 1,200
-                        td(data-th='付款狀態') 已取貨
-                        td(data-th='訂單狀態') 2017/02/10
+                        td(data-th='總計金額') $ 1,200
+                        td(data-th='訂單狀態') 已取貨
+                        td(data-th='鑑賞期限') 
                         td(data-th='')
                             button.do_button.do_return 我要取消
                     
@@ -56,9 +56,9 @@ block content
                         td(data-th='訂單編號') 
                             a(href="#") EJ201702030001
                         td(data-th='下單時間') 2017/02/03 12:21
-                        td(data-th='付款方式') $ 1,200
-                        td(data-th='付款狀態') 已取貨
-                        td(data-th='訂單狀態') 2017/02/10
+                        td(data-th='總計金額') $ 1,200
+                        td(data-th='訂單狀態') 已取貨
+                        td(data-th='鑑賞期限') 2017/02/10
                         td(data-th='')
                             button.do_button.do_return 我要取消
                     
@@ -66,9 +66,9 @@ block content
                         td(data-th='訂單編號') 
                             a(href="#") EJ201702030001
                         td(data-th='下單時間') 2017/02/03 12:21
-                        td(data-th='付款方式') $ 1,200
-                        td(data-th='付款狀態') 已出貨
-                        td(data-th='訂單狀態') 
+                        td(data-th='總計金額') $ 1,200
+                        td(data-th='訂單狀態') 已出貨
+                        td(data-th='鑑賞期限') 
                         td(data-th='')
                             button.do_button.empty_button null
                     
@@ -76,8 +76,8 @@ block content
                         td(data-th='訂單編號') 
                             a(href="#") EJ201702030001
                         td(data-th='下單時間') 2017/02/03 12:21
-                        td(data-th='付款方式') $ 1,200
-                        td(data-th='付款狀態') 尚未完成付款
-                        td(data-th='訂單狀態') 
+                        td(data-th='總計金額') $ 1,200
+                        td(data-th='訂單狀態') 尚未完成付款
+                        td(data-th='鑑賞期限') 
                         td(data-th='')
                             button.do_button.empty_button null
