Fix order_detail page bug
1. Change error col data
2. Move statistic table

--- a/dev/order_detail/index.jade
+++ b/dev/order_detail/index.jade
@@ -135,15 +135,15 @@ block content
                             td(data-th='姓名') 盧曉筱
                             td(data-th='電話') 2017/02/03 12:21
                             td(data-th='送貨方式') 超商取貨付款
-                            td(data-th='取貨門市名稱') 未付款
-                            td(data-th='門市地址') 訂單處理中
+                            td(data-th='取貨門市名稱') 龍泉門市
+                            td(data-th='門市地址') 台北市大安區龍泉街20號
                             td(data-th='包裹追蹤碼') 12d124455
                         tr
                             td(data-th='姓名') 盧曉筱
                             td(data-th='電話') 2017/02/03 12:21
                             td(data-th='送貨方式') 超商取貨付款
-                            td(data-th='取貨門市名稱') 未付款
-                            td(data-th='門市地址') 訂單處理中
+                            td(data-th='取貨門市名稱') 龍泉門市
+                            td(data-th='門市地址') 台北市大安區龍泉街20號
                             td(data-th='包裹追蹤碼') 12d124455
 
             .section_title 取消明細
