--- a/dev/order_detail/all.styl
+++ b/dev/order_detail/all.styl
@@ -26,7 +26,7 @@
         color: #4A4A4A
         font-weight: 100
         font-size: 18px
-        margin-bottom: 5px
+        margin-bottom: 10px
 
 .side_bar
     li.active
@@ -36,6 +36,8 @@
 .statistics_table
     width: 300px;
     align-self: flex-end;
+    margin-right: 30px;
+
     &>span
         display: flex;
         justify-content: flex-end;
@@ -318,6 +320,7 @@
         margin-top: 11px
     .statistics_table
         width: 100%
+        margin-right: initial
 
         span
             margin-right: calc("100% - 300px")
