--- a/dev/order_detail/index.jade
+++ b/dev/order_detail/index.jade
@@ -23,7 +23,7 @@ block append content
     //-             li
     //-                 a(href="") 登出
 block member_section
-    section.order_tables_wrapper
+    section.order_tables_wrapper.table_wrapper
     
         .section_title 訂購商品
             hr.split
