--- a/dev/order_query/index.jade
+++ b/dev/order_query/index.jade
@@ -27,7 +27,7 @@ block append content
         -var navArray = ["首頁","會員專區","訂單查詢"]
 
 block member_section
-    section.order_query_info_table_wrapper
+    section.order_query_info_table_wrapper.table_wrapper
 
         table.order_query_info_table.rwd-table
             thead
@@ -146,7 +146,7 @@ block member_section
                 a(href="") 退貨方式
         
         div.radio_button_wrapper
-            input(type="radio" name="cancel_type")#user_check_know
+            input(type="radio" name="know")#user_check_know
             label(for="user_check_know") 我已詳盡閱讀退貨須知，並確認進行退貨程序。
         
         span.dialog_button_wrapper
