修正choice_return_product page
1. Add choice_return_product js
2.修正choice_return_product page font-size

--- a/dev/choice_return_product/all.styl
+++ b/dev/choice_return_product/all.styl
@@ -251,6 +251,8 @@ tr.have_comment
         margin:0
         margin-top: 15px
         text-align: center
+        font-weight: 100
+        font-size: 13px
     
     .warning_bold
         font-weight: 500
@@ -259,6 +261,8 @@ tr.have_comment
 .radio_button_wrapper
     display: flex
     justify-content: center;
+    align-items: center;
+    font-size: 14px
     margin: 50px 0;
 
 #user_check_know
